# gestrix

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  DATA_LICENSES.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  colab-requirements.txt  logging.ini  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
backend/: README.md  alembic.ini  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: auth.py  health.py  models.py
backend/app/auth/: dependencies.py  password.py  schemas.py  tokens.py
backend/app/db/: migrate.py  session.py
backend/app/llm/: aliases.py  client.py  exceptions.py
backend/app/models/: __init__.py  agent_trace.py  chat.py  document.py  message.py  model_alias.py  prompt.py  run.py  user.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_seed_model_aliases.py  0003_chat_domain.py
backend/tests/: conftest.py  test_app_factory.py  test_chat_models.py  test_config.py  test_db_session.py  test_health.py  test_migrations.py  test_models.py  test_seed.py
backend/tests/api/: test_auth_endpoints.py  test_auth_security.py  test_models_endpoint.py
backend/tests/auth/: test_dependencies.py  test_password.py  test_tokens.py
backend/tests/llm/: test_aliases.py  test_client.py  test_guardrails.py  test_openrouter_live.py  test_retry_dependency.py
data/processed/mini/: mini_demo_1.pddl  mini_demo_2.pddl
data/raw/pddl/: SOURCE.md
data/raw/pddl/blocksworld/: domain.pddl  problem-01.pddl
data/raw/pddl/gripper/: domain.pddl  problem-01.pddl
docker/: fastdownward.Dockerfile
notebooks/: 00_colab_bootstrap.ipynb  02_dataset_preview.ipynb
previousWorks/: .gitkeep
scripts/: check_pddl_syntax.py  gen_checksums.py  setup_fastdownward.sh  verify_dataset_integrity.py
src/gestrix/: cli.py  config.py
src/gestrix/planners/: fd.py
src/gestrix/utils/: checksum.py
tests/: test_cli.py  test_fd.py
