[tool.poetry]
name = "gestrix"
version = "0.0.1"
description = "Neuro-symbolic AI planning framework"
authors = ["Ebai Geslen <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "gestrix", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pydantic-settings = "^2.5"
python-dotenv = "^1.0"
typer = {version = "^0.12", extras = ["all"]}

[tool.poetry.group.dev.dependencies]
ruff = "*"
black = "*"
mypy = "*"
pytest = "*"
pre-commit = "*"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = false

[tool.poetry.scripts]
gestrix = "gestrix.cli:main"
