[project]
name = "gestrix-backend"
version = "0.1.0"
description = "Gestrix SEO backend"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.118",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "aiosqlite>=0.20",
    "passlib[bcrypt]>=1.7",
    # passlib 1.7.4 is incompatible with bcrypt >= 4.1 (its backend probe trips
    # bcrypt's 72-byte limit). Pin to the 4.0.x line until passlib ships a fix.
    "bcrypt>=4.0,<4.1",
    "python-jose[cryptography]>=3.3",
    "email-validator>=2.2",
    "litellm>=1.55",
    # Required by litellm's retry path (we pass num_retries); litellm does not
    # pull it in, so without it any retryable error raises ModuleNotFoundError.
    "tenacity>=8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "ruff>=0.9",
    "mypy>=1.13",
    "types-passlib>=1.7",
    "types-python-jose>=3.3",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency-injection markers are designed to be called in defaults.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Cookie",
    "fastapi.Header",
]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app"]

[[tool.mypy.overrides]]
# litellm ships no usable type information.
module = ["litellm", "litellm.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: live external calls (e.g. real OpenRouter); deselected by default",
]
# Skip integration tests unless explicitly selected with `-m integration`.
addopts = "-m 'not integration'"
